Bug 156783 - LO crash selecting table with the whole document and changing table border
Summary: LO crash selecting table with the whole document and changing table border
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bibisectRequest
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-08-16 06:46 UTC by NISZ LibreOffice Team
Modified: 2023-08-18 09:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (10.23 KB, application/vnd.oasis.opendocument.text)
2023-08-16 06:47 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-08-16 06:46:50 UTC
Description:
In Hide Changes mode, if you select the attached table by pressing Ctrl-A, then select the border around the table in the local menu 
(it doesn't show, even though the table already has a border) and click OK, the program crashes. 
(Even the selection is not a normal table selection anymore, this may be the error.)

Steps to Reproduce:
1. Open attached file.
2. Select the table by pressing Ctrl-A.
3. Select the border around the table in the local menu.
4. Click "OK"

Actual Results:
LO crashes.

Expected Results:
LO doesn't crashes.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5fecd865303b3f0a2eeb0b9466d2bcf23cfce068
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-08-16 06:47:15 UTC
Created attachment 188993 [details]
Sample file
Comment 2 Commit Notification 2023-08-17 22:07:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e79f0f65ab06baafc7e8a6aeb1d89ca748087b24

tdf#156783 sw tracked table column: fix crash setting border

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2023-08-17 22:12:00 UTC
Commit description:

tdf#156783 sw tracked table column: fix crash setting border

or border padding without correct table cursor.

Table formatting is allowed on text selections starting
with tables, but adding border or border padding
resulted crashing. This regression became more visible
with hidden deleted table columns, where SelectTable
(e.g. Ctrl-A) doesn't select the whole table, but only
the text content of the visible cells, and in the case
of hidden right table columns, without table cursor.

Manual test: insert two tables in the document, and in the
first cell of the first table, select the whole document
by  pressing Ctrl-A 2 times or more. In table settings,
enable table border or modify padding to crash LibreOffice.

Regression since version 7.5.
Comment 4 Commit Notification 2023-08-18 09:28:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2748138cb5c1ad03ef794f8411e28e02de608f39

tdf#156783 sw tracked table column: fix crash setting border

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.